<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="maxundmax.holiday4friends.holiday_overview">

    <EditText
        android:id="@+id/modifyHolidayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:hint="@string/geben_sie_einen_namen_an"
        android:singleLine="true" />

    <EditText
        android:id="@+id/modifyHolidayDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_below="@+id/modifyHolidayName"
        android:hint="@string/geben_sie_eine_beschreibung_an" />



    <ImageView
        android:id="@+id/modifyHolidayImageViewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_below="@+id/modifyHolidayDescription"
        android:layout_above="@id/modifyHolidayBtnSave"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"

        />

    <ImageButton
        android:id="@+id/modifyHolidayBtnImageSelektor"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:layout_above="@id/modifyHolidayBtnSave"
        android:layout_alignParentEnd="true"
        android:background="@drawable/roundcorner"
        android:backgroundTint="#cc333333"
        android:padding="5dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_party_mode_black_24dp"
        android:tint="#ffffff"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/modifyHolidayBtnSave"
        style="@style/FirebaseUI.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/speichern" />


</RelativeLayout>
